# SnapConfig

./: DOCS.md  README.md  SnapConfig.h
example/: CMakeLists.txt  compile_example.sh  config.txt  example  example.cpp
tests/: CMakeLists.txt  compile_tests.sh  snap_tests  snap_tests.cpp  test.conf  test_config.txt
